// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib/workers/package/index renovatePackage(config) merges type 1`] = `
Array [
  "timezone",
  "schedule",
  "branchPrefix",
  "semanticCommits",
  "semanticPrefix",
  "recreateClosed",
  "rebaseStalePrs",
  "unpublishSafe",
  "prCreation",
  "automerge",
  "automergeType",
  "requiredStatusChecks",
  "branchName",
  "commitMessage",
  "prTitle",
  "prBody",
  "lazyGrouping",
  "groupName",
  "groupSlug",
  "group",
  "labels",
  "assignees",
  "reviewers",
  "depName",
  "currentVersion",
  "isMajor",
  "repositoryUrl",
]
`;

exports[`lib/workers/package/index renovatePackage(config) returns array if upgrades found 1`] = `
Array [
  "timezone",
  "schedule",
  "branchPrefix",
  "semanticCommits",
  "semanticPrefix",
  "recreateClosed",
  "rebaseStalePrs",
  "unpublishSafe",
  "prCreation",
  "automerge",
  "automergeType",
  "requiredStatusChecks",
  "branchName",
  "commitMessage",
  "prTitle",
  "prBody",
  "lazyGrouping",
  "groupName",
  "groupSlug",
  "group",
  "labels",
  "assignees",
  "reviewers",
  "depName",
  "currentVersion",
  "repositoryUrl",
]
`;

exports[`lib/workers/package/index renovatePackage(config) returns error if no npm dep found 1`] = `
Array [
  Object {
    "assignees": Array [],
    "automerge": "none",
    "automergeType": "pr",
    "branchName": "{{branchPrefix}}{{depName}}-{{newVersionMajor}}.x",
    "branchPrefix": "renovate/",
    "commitMessage": "Update dependency {{depName}} to v{{newVersion}}",
    "currentVersion": "1.0.0",
    "depName": "foo",
    "group": Object {
      "branchName": "{{branchPrefix}}{{groupSlug}}",
      "commitMessage": "Renovate {{groupName}} packages",
      "prBody": "This {{#if isGitHub}}Pull{{else}}Merge{{/if}} Request renovates the package group \\"{{groupName}}\\".

{{#if schedule}}
**Note**: This PR was created on a configured schedule (\\"{{schedule}}\\"{{#if timezone}} in timezone \`{{timezone}}\`{{/if}}) and will not receive updates outside those times.
{{/if}}

{{#each upgrades as |upgrade|}}
-   {{#if repositoryUrl}}[{{upgrade.depName}}]({{upgrade.repositoryUrl}}){{else}}\`{{depName}}\`{{/if}}: from \`{{upgrade.currentVersion}}\` to \`{{upgrade.newVersion}}\`
{{/each}}

{{#unless isPin}}
### Commits

{{#each upgrades as |upgrade|}}
{{#if upgrade.releases.length}}
<details>
<summary>{{upgrade.githubName}}</summary>
{{#each upgrade.releases as |release|}}

#### {{release.version}}
{{#each release.commits as |commit|}}
-   [\`{{commit.shortSha}}\`]({{commit.url}}){{commit.message}}
{{/each}}
{{/each}}

</details>
{{/if}}
{{/each}}
{{/unless}}
<br />

{{#if hasErrors}}

---

### Errors

Renovate encountered some errors when processing your repository, so you are being notified here even if they do not directly apply to this PR.

{{#each errors as |error|}}
-   \`{{error.depName}}\`: {{error.message}}
{{/each}}
{{/if}}

{{#if hasWarnings}}

---

### Warnings

Please make sure the following warnings are safe to ignore:

{{#each warnings as |warning|}}
-   \`{{warning.depName}}\`: {{warning.message}}
{{/each}}
{{/if}}

---

This {{#if isGitHub}}PR{{else}}MR{{/if}} has been generated by [Renovate Bot](https://renovateapp.com).",
      "prTitle": "Renovate {{groupName}} packages",
      "recreateClosed": true,
    },
    "groupName": null,
    "groupSlug": null,
    "labels": Array [],
    "lazyGrouping": true,
    "message": "Failed to look up dependency",
    "prBody": "This {{#if isGitHub}}Pull{{else}}Merge{{/if}} Request {{#if isRollback}}rolls back{{else}}updates{{/if}} dependency {{#if repositoryUrl}}[{{depName}}]({{repositoryUrl}}){{else}}\`{{depName}}\`{{/if}} from \`v{{currentVersion}}\` to \`v{{newVersion}}\`{{#if isRollback}}. This is necessary and important because \`v{{currentVersion}}\` cannot be found in the npm registry - probably because of it being unpublished.{{/if}}
{{#if releases.length}}

{{#if schedule}}
**Note**: This PR was created on a configured schedule (\\"{{schedule}}\\"{{#if timezone}} in timezone \`{{timezone}}\`{{/if}}) and will not receive updates outside those times.
{{/if}}

### Commits

<details>
<summary>{{githubName}}</summary>

{{#each releases as |release|}}
#### {{release.version}}
{{#each release.commits as |commit|}}
-   [\`{{commit.shortSha}}\`]({{commit.url}}) {{commit.message}}
{{/each}}
{{/each}}

</details>
{{/if}}

{{#if hasErrors}}

---

### Errors

Renovate encountered some errors when processing your repository, so you are being notified here even if they do not directly apply to this PR.

{{#each errors as |error|}}
-   \`{{error.depName}}\`: {{error.message}}
{{/each}}
{{/if}}

{{#if hasWarnings}}

---

### Warnings

Please make sure the following warnings are safe to ignore:

{{#each warnings as |warning|}}
-   \`{{warning.depName}}\`: {{warning.message}}
{{/each}}
{{/if}}

---

This {{#if isGitHub}}PR{{else}}MR{{/if}} has been generated by [Renovate Bot](https://renovateapp.com).",
    "prCreation": "immediate",
    "prTitle": "{{#if isPin}}Pin{{else}}{{#if isRollback}}Roll back{{else}}Update{{/if}}{{/if}} dependency {{depName}} to {{#if isRange}}{{newVersion}}{{else}}{{#if isMajor}}v{{newVersionMajor}}{{else}}v{{newVersion}}{{/if}}{{/if}}",
    "rebaseStalePrs": false,
    "recreateClosed": false,
    "repoIsOnboarded": true,
    "repositoryUrl": null,
    "requiredStatusChecks": Array [],
    "reviewers": Array [],
    "schedule": "some schedule",
    "semanticCommits": null,
    "semanticPrefix": "chore(deps):",
    "timezone": null,
    "type": "error",
    "unpublishSafe": true,
  },
]
`;

exports[`lib/workers/package/index renovatePackage(config) returns warning if using invalid version 1`] = `
Array [
  Object {
    "depName": "foo",
    "message": "Dependency uses tag \\"\`git+ssh://git@github.com/joefraley/eslint-config-meridian.git\`\\" as its version so that will never be changed by Renovate",
    "type": "warning",
  },
]
`;
